[Mantaflow] Mesh generation bug #72975

Closed
opened 2020-01-08 18:18:07 +01:00 by Pavel Blend · 11 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: AMD Radeon HD 7560D ATI Technologies Inc. 4.5.13417 Core Profile Context 15.301.1901.0

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-06 20:54, hash: 3a35301fd1
Worked: (optional)

Short description of error
The mesh has spikes.

Exact steps for others to reproduce the error
Open:
mantaflow_mesh_bug.blend

  • Bake the FLIP particles, and then bake the mesh and you will see the following result:
    mantaflow_mesh_bug.jpg
    mantaflow_mesh_bug_side_view.jpg
    sim0000-0140.mkv
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: AMD Radeon HD 7560D ATI Technologies Inc. 4.5.13417 Core Profile Context 15.301.1901.0 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-06 20:54, hash: `3a35301fd1` Worked: (optional) **Short description of error** The mesh has spikes. **Exact steps for others to reproduce the error** Open: [mantaflow_mesh_bug.blend](https://archive.blender.org/developer/F8267788/mantaflow_mesh_bug.blend) - Bake the FLIP particles, and then bake the mesh and you will see the following result: ![mantaflow_mesh_bug.jpg](https://archive.blender.org/developer/F8266296/mantaflow_mesh_bug.jpg) ![mantaflow_mesh_bug_side_view.jpg](https://archive.blender.org/developer/F8266298/mantaflow_mesh_bug_side_view.jpg) [sim0000-0140.mkv](https://archive.blender.org/developer/F8267789/sim0000-0140.mkv)
Author

Added subscriber: @Pavel_Blend

Added subscriber: @Pavel_Blend

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Does this problem happen when you start the simulation from frame 1?
I don't know if it's a bug, but in this file I can't make the simulation start if not from frame 2 or less.

Does this problem happen when you start the simulation from frame 1? I don't know if it's a bug, but in this file I can't make the simulation start if not from frame 2 or less.
Author

Set the Cache Frame Start parameters to 0, Frame End to 200. I forgot to do this.

Set the Cache Frame Start parameters to 0, Frame End to 200. I forgot to do this.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

I confirm the result, but I can't tell if it's the result of a bug or something else.

I confirm the result, but I can't tell if it's the result of a bug or something else.
Sebastián Barschkis was assigned by Bastien Montagne 2020-01-14 14:47:25 +01:00

@Pavel_Blend Just checked the parameters in the file and I think the Particle Radius in the mesh settings is too low. When increasing the mesh resolution, the radius needs to go up as well. Still have to bake the scene myself to confirm that that's the issue here though.

@Pavel_Blend Just checked the parameters in the file and I think the `Particle Radius` in the mesh settings is too low. When increasing the mesh resolution, the radius needs to go up as well. Still have to bake the scene myself to confirm that that's the issue here though.

This issue was referenced by 7a9f102537

This issue was referenced by 7a9f102537c1d4d6db7f4d994baf8dcd35cfcb04

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Ok, I there was in fact a bug! @Pavel_Blend Please try it out and if the issue persists feel free to reopen.

Ok, I there was in fact a bug! @Pavel_Blend Please try it out and if the issue persists feel free to reopen.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72975
No description provided.