Fix T72975: [Mantaflow] Mesh generation bug

The initial value for phi was too high.